test: test 커버리지 보완