@@ -5,6 +5,8 @@ import feign.Request;
 import feign.Request.HttpMethod;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
@@ -18,17 +20,20 @@ class FeignExceptionHandlerTest {
 
     private final FeignExceptionHandler exceptionHandler = new FeignExceptionHandler();
 
+    // 공통 Request 생성을 위한 헬퍼 메소드
+    private Request createRequest() {
+        return Request.create(HttpMethod.GET, "/api/test", Map.of(), null, null, null);
+    }
+
     @Test
     @DisplayName("FeignException - 정상적인 에러 응답(JSON) 파싱")
     void handleFeignException_ValidJson() {
         // given
         String errorJson = "{\"code\":\"BAD_REQUEST\", \"message\":\"잘못된 요청입니다.\"}";
-        Request request = Request.create(HttpMethod.GET, "/api/test", Map.of(), null, null, null);
-
-        // 400 Bad Request 발생 상황 시뮬레이션
+        
         FeignException exception = new FeignException.BadRequest(
                 "Bad Request",
-                request,
+                createRequest(),
                 errorJson.getBytes(StandardCharsets.UTF_8),
                 Collections.emptyMap()
         );
@@ -48,11 +53,10 @@ class FeignExceptionHandlerTest {
     void handleFeignException_InvalidJson() {
         // given
         String rawBody = "Internal Server Error Occurred"; // JSON 아님
-        Request request = Request.create(HttpMethod.POST, "/api/test", Map.of(), null, null, null);
-
+        
         FeignException exception = new FeignException.InternalServerError(
                 "Server Error",
-                request,
+                createRequest(),
                 rawBody.getBytes(StandardCharsets.UTF_8),
                 Collections.emptyMap()
         );
@@ -63,19 +67,18 @@ class FeignExceptionHandlerTest {
         // then
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
         assertThat(response.getBody()).isNotNull();
+        // 파싱 실패 시 지정된 기본값 확인
         assertThat(response.getBody().code()).isEqualTo("FEIGN_ERROR");
         assertThat(response.getBody().message()).isEqualTo("외부 서비스 호출 중 오류가 발생했습니다.");
     }
 
     @Test
-    @DisplayName("FeignException - 바디가 없는 경우 기본 메시지 반환")
+    @DisplayName("FeignException - 바디가 null인 경우 기본 메시지 반환")
     void handleFeignException_NullBody() {
         // given
-        Request request = Request.create(HttpMethod.GET, "/api/test", Map.of(), null, null, null);
-        // 바디가 null인 예외
         FeignException exception = new FeignException.NotFound(
                 "Not Found",
-                request,
+                createRequest(),
                 null,
                 Collections.emptyMap()
         );
@@ -90,22 +93,105 @@ class FeignExceptionHandlerTest {
     }
 
     @Test
-    @DisplayName("FeignException - 알 수 없는 상태 코드는 500으로 처리")
-    void handleFeignException_UnknownStatus() {
+    @DisplayName("FeignException - 바디가 빈 문자열(\"\")인 경우 파싱 스킵 및 기본 메시지 반환")
+    void handleFeignException_EmptyStringBody() {
         // given
-        Request request = Request.create(HttpMethod.GET, "/api/test", Map.of(), null, null, null);
-        // 상태 코드 0 (FeignException 기본 생성자 등에서 발생 가능) 또는 정의되지 않은 코드
-        FeignException exception = new FeignException(0, "Unknown Error", request, null, null) {};
+        String emptyBody = "";
+        FeignException exception = new FeignException.BadRequest(
+                "Bad Request",
+                createRequest(),
+                emptyBody.getBytes(StandardCharsets.UTF_8),
+                Collections.emptyMap()
+        );
 
         // when
         ResponseEntity<FeignExceptionHandler.ErrorResponse> response = exceptionHandler.handleFeignException(exception);
 
         // then
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().code()).isEqualTo("FEIGN_ERROR");
     }
 
     @Test
-    @DisplayName("일반 Exception 처리")
+    @DisplayName("FeignException - 바디가 공백(\"   \")인 경우 파싱 스킵 및 기본 메시지 반환")
+    void handleFeignException_WhitespaceBody() {
+        // given
+        String whitespaceBody = "   ";
+        FeignException exception = new FeignException.BadRequest(
+                "Bad Request",
+                createRequest(),
+                whitespaceBody.getBytes(StandardCharsets.UTF_8),
+                Collections.emptyMap()
+        );
+
+        // when
+        ResponseEntity<FeignExceptionHandler.ErrorResponse> response = exceptionHandler.handleFeignException(exception);
+
+        // then
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+        assertThat(response.getBody().code()).isEqualTo("FEIGN_ERROR");
+    }
+
+    @Test
+    @DisplayName("FeignException - JSON 필드가 일부만 있는 경우(message 누락)")
+    void handleFeignException_PartialJson() {
+        // given
+        // message 필드가 없는 경우
+        String json = "{\"code\":\"PARTIAL_ERROR\"}"; 
+        FeignException exception = new FeignException.BadRequest(
+                "Bad Request",
+                createRequest(),
+                json.getBytes(StandardCharsets.UTF_8),
+                Collections.emptyMap()
+        );
+
+        // when
+        ResponseEntity<FeignExceptionHandler.ErrorResponse> response = exceptionHandler.handleFeignException(exception);
+
+        // then
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().code()).isEqualTo("PARTIAL_ERROR");
+        // ObjectMapper는 없는 필드를 null로 매핑
+        assertThat(response.getBody().message()).isNull(); 
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {401, 403, 404, 405, 500, 502, 503})
+    @DisplayName("FeignException - 다양한 HTTP 상태 코드 전파 확인")
+    void handleFeignException_VariousStatusCodes(int status) {
+        // given
+        // 익명 클래스로 특정 상태 코드를 가진 FeignException 생성
+        FeignException exception = new FeignException(status, "Error", createRequest(), null, null) {};
+
+        // when
+        ResponseEntity<FeignExceptionHandler.ErrorResponse> response = exceptionHandler.handleFeignException(exception);
+
+        // then
+        assertThat(response.getStatusCodeValue()).isEqualTo(status);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().code()).isEqualTo("FEIGN_ERROR");
+    }
+
+    @Test
+    @DisplayName("FeignException - 정의되지 않은 상태 코드(999)는 500 Internal Server Error 처리")
+    void handleFeignException_InvalidStatusCode() {
+        // given
+        // HttpStatus enum에 없는 코드 (999)
+        FeignException exception = new FeignException(999, "Unknown Code", createRequest(), null, null) {};
+
+        // when
+        ResponseEntity<FeignExceptionHandler.ErrorResponse> response = exceptionHandler.handleFeignException(exception);
+
+        // then
+        // HttpStatus.resolve(999) == null 이므로 500 반환 예상
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
+        assertThat(response.getBody().code()).isEqualTo("FEIGN_ERROR");
+    }
+
+    @Test
+    @DisplayName("일반 Exception 처리 - 500 에러 및 FE001 코드 반환")
     void handleException() {
         // given
         Exception e = new RuntimeException("Unexpected Error");
